# MyGL

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  _abstract_shape_8hpp_source.html  _camera_8hpp_source.html  _color_8hpp_source.html  _cursor_8hpp_source.html  _event_8hpp.html  _event_8hpp.js  _event_8hpp_source.html  _font_8hpp_source.html  _image_8hpp_source.html  _polygon_8hpp_source.html  _rectangle_8hpp_source.html  _shader_8hpp_source.html  _shader_program_8hpp_source.html  _text_8hpp_source.html  _texture_8hpp_source.html  _triangle_8hpp_source.html  _window_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classmy_1_1_abstract_shape-members.html  classmy_1_1_abstract_shape.html  classmy_1_1_abstract_shape.js  classmy_1_1_camera-members.html  classmy_1_1_camera.html  classmy_1_1_camera.js  classmy_1_1_color-members.html  classmy_1_1_color.html  classmy_1_1_color.js  classmy_1_1_cursor-members.html  classmy_1_1_cursor.html  classmy_1_1_cursor.js  (+86 more)
.github/workflows/: build.yml  linux.yml  test_build.yml  update_docs.yml  windows.yml
CMake/: FindSphinx.cmake  MyGLConfig.cmake
Docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  install.rst
Docs/ApiDoc/: color.rst  docindex.rst  vector.rst
Docs/ApiDoc/Camera/: fixedcamera.rst  movablecamera.rst
Docs/ApiDoc/Drawable/: font.rst  rectangle.rst  text.rst
Include/MyGL/: Camera.hpp  Color.hpp  Drawable.hpp  Header.hpp  Shader.hpp  Texture.hpp  Vector.hpp  Window.hpp  mygl_export.h  test.h
Include/MyGL/Camera/: Cam2D.hpp  Cam3D.hpp  FixedCamera.hpp  FpsCamera.hpp  MovableCamera.hpp
Include/MyGL/Drawable/: AbstractShape.hpp  Font.hpp  Polygon.hpp  Rectangle.hpp  Text.hpp
Include/glad/: glad.h
Libs/SDL2/UNIX/lib/: libSDL2-2.0d.so.0
Libs/SDL2/WIN32/cmake/: SDL2Config.cmake
Libs/SDL2/WIN32/lib/: SDL2maind.lib
Libs/SDL2/include/SDL2/: SDL_config.h
Libs/SDL2/lib/: SDL2main.lib  libSDL2-2.0.so.0.14.0
Libs/SDL2/lib/cmake/SDL2/: SDL2Targets-release.cmake
Libs/SDL2/lib/pkgconfig/: sdl2.pc
Libs/Windows/: freetype.lib  freetyped.lib  sfml-main-d.lib  sfml-main.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s-d.lib  sfml-window-s.lib
Libs/freetype/lib/: freetype.lib  freetyped.lib
Ressources/: AbstractShape.glsl  Text.glsl  fragment.glsl  testFragment.glsl  vertex.glsl
Shaders/: glyphVertex.glsl  testVertex.glsl
Source/: Color.cpp  Shader.cpp  Texture.cpp  Vector.cpp  Window.cpp  glad.c  test.c
Source/Camera/: Cam2D.cpp  Cam3D.cpp  FixedCamera.cpp  FpsCamera.cpp  MovableCamera.cpp
Source/Drawable/: AbstractShape.cpp  Font.cpp  Rectangle.cpp  Text.cpp
Test/: CMakeLists.txt  main.cpp
cmake/: FindSphinx.cmake  MyGLConfig.cmake
docs/: CMakeLists.txt  Doxyfile.in  custom-style.css  index.md  install.md  install.rst  meson.build  usage.md  usage.rst
docs/ApiDoc/: animation.rst  docindex.rst  event.rst  shader.rst  texture.rst  window.rst
docs/ApiDoc/Camera/: cam2d.rst
docs/ApiDoc/Drawable/: abstractshape.rst  polygon.rst  text.rst
docs/doxygen-awesome/: footer.html  header.html
examples/: CMakeLists.txt  meson.build
examples/custom_shader/: CMakeLists.txt  custom_shader.cpp  meson.build
examples/custom_shader/resources/: CustomFragment.glsl  meson.build
examples/magnifying_glass/: CMakeLists.txt  magnifying_glass.cpp  meson.build
examples/magnifying_glass/resources/: meson.build
examples/simple_program/: CMakeLists.txt  meson.build  simple_program.cpp
examples/text/: CMakeLists.txt  meson.build  text.cpp
examples/text/resources/: meson.build
include/: meson.build
include/MyGL/: Animation.hpp  Camera.hpp  Color.hpp  Cursor.hpp  Drawable.hpp  Event.hpp  Image.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  Window.hpp  common.hpp  mygl.hpp  mygl_export.h
include/MyGL/Camera/: Cam2D.hpp  Cam3D.hpp  FixedCamera.hpp  FpsCamera.hpp  MovableCamera.hpp
include/MyGL/Drawable/: AbstractShape.hpp  ConstText.hpp  Font.hpp  Polygon.hpp  Rectangle.hpp  Text.hpp  Triangle.hpp
include/glad/: gl.h  glad.h
misc/: ci_test_file.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+43 more)
src/: Animation.cpp  Camera.cpp  Color.cpp  Cursor.cpp  Event.cpp  Image.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  Vector.cpp  Window.cpp  common.cpp  glad.c  meson.build
src/Camera/: Cam2D.cpp
src/Drawable/: AbstractShape.cpp  ConstText.cpp  Font.cpp  Polygon.cpp  Rectangle.cpp  Text.cpp  Triangle.cpp
subprojects/: utfcpp.wrap
test/: CMakeLists.txt  ci_test_file.cpp  main.cpp
