option('mygl_build_examples', type: 'boolean', value: false,
        description: 'If on, build and install the example programs alongside the library')
option('mygl_build_docs', type: 'boolean', value: false,
        description: 'Enables the documentation target using Doxygen')
option('mygl_docs_only', type: 'boolean', value: false,
        description: 'Only build the documentation, regardless of other options')
